# mc906

./: CLAUDE.md  Melhor Heurística Corner Melhor ordenação → mais podas → maior profundidade → decisões mais informadas.(1).pptx  README.md  pyproject.toml  reversi_pygame.py
plots/: summary.txt
results/: agent_tournament.csv  import_fix_smoke.csv
src/: agents_tournament.py  alpha_beta_pruning_strategy.py  analyze_depth.py  border_control_heuristic.py  frontier_heuristic.py  minimax_strategy.py  mobility_heuristic.py  random_strategy.py  tournament_analytics_plots.py
t1/results/: agent_tournament.csv  test_tournament.csv
t1/src/: alpha_beta_pruning_strategy.py  frontier_heuristic.py  interactive_pygame.py  minimax_strategy.py  mobility_heuristic.py  othello_core.py  random_strategy.py  (+1 more)
t2/: CLAUDE.md  data-refinement.ipynb  relatorio_final.tex  training_agents.ipynb
t3/: mlp.py  pyproject.toml  report.md  t3.ipynb  t3.md
t4/: deep_learning.py  home_credit_default_risk.ipynb  interpretability.py  main_pipeline.py  models.py  preprocessing.py  pyproject.toml  quick_run.py  t4.md
t4/outputs/artifacts/: feature_correlations.csv  model_comparison.csv  shap_feature_importance.csv
t4/outputs/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
t4/outputs/catboost_info/learn/: events.out.tfevents
t4/outputs/catboost_info/test/: events.out.tfevents
t4/outputs/submissions/: submission.csv  submission_cb.csv  submission_dl.csv  submission_lgb.csv  submission_lr.csv  submission_rf.csv  submission_xgb.csv
t4/report/: report.tex
(+68 files in other folders)
